spacing issues

--- a/TEP/tep.css
+++ b/TEP/tep.css
@@ -105,7 +105,7 @@
 }
 
 .padding-top{
-    padding-top: 10%;
+    padding-top: 5%;
 }
 
 .svg-scaling {
@@ -128,6 +128,11 @@
 .svg-container-margins {
     margin-left: 5%;
     margin-right: 5%;
+}
+
+.svg-location-container-margins {
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .interstate {
@@ -442,7 +447,6 @@ src: url("../Fonts/Interstate_Light.ttf");
     .roles-styling {
         background-color: white; /* Used if the image is unavailable */
         height: 100vh; /* You must set a specified height */
-        padding-top: 30px;
         display: inline-block;
     }   
 
@@ -450,7 +454,7 @@ src: url("../Fonts/Interstate_Light.ttf");
     .stats-image {
         background-image: url("Backgrounds/Desktop/Stats.png"); /* The image used */
         background-color: #cccccc; /* Used if the image is unavailable */
-        height: 90vh; /* You must set a specified height */
+        height: 70vh; /* You must set a specified height */
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
         background-size: cover; /* Resize the background image to cover the entire container */
@@ -468,15 +472,10 @@ src: url("../Fonts/Interstate_Light.ttf");
 
 
     .locations-styling {
-        background-color: #333333; /* Used if the image is unavailable */
-        display: -webkit-box;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-flex-flow: row wrap;
-        justify-content: space-around;
-        height: 95vh;
+        background-color: #333333;
+        height: 70vh;
+        display: inline-block;
+        width: 100%;
     }
 
 
@@ -488,7 +487,7 @@ src: url("../Fonts/Interstate_Light.ttf");
 
     .experience-styling {
         background-color: white;
-        height: 90vh;
+        height: 80vh;
         display: inline-block;
     }
 
@@ -518,7 +517,7 @@ src: url("../Fonts/Interstate_Light.ttf");
     } 
 
     .padding-top{
-        padding-top: 10%;
+        padding-top: 5%;
     }
 }
 
